# gnn-builder

./: .buildinfo  .gitignore  README.md  environment.yaml  genindex.html  index.html  objects.inv  overview.html  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.html  simple-tutorial.html
.doctrees/: environment.pickle  index.doctree  overview.doctree  setup.doctree  simple-tutorial.doctree
_sources/: index.rst.txt
demos/: .gitignore  demo.py  simple_test.py
dse_models/: model_bram.pk  model_direct.pk
experiments/: build_base_benchmarks.py  build_dse_models.py  build_gnnbuilder_benchmarks.py  print_graph_stats.py  process_and_plot_data.py  process_dse_models.py  process_dse_runtime.py
figures/: Thumbs.db  resource_utilization_pivot.csv  resource_utilization_pivot.tex  runtime_results.csv  runtime_results_pivot.csv  runtime_speedup_results.csv  runtime_speedup_results.tex
figures_testing/: resource_utilization_pivot.csv  resource_utilization_pivot.tex  speedup_all.csv  speedup_all.tex  speedup_all.xlsx  speedup_min_max.csv  speedup_min_max.tex  speedup_min_max.xlsx
gnn_builder/: code_gen.py  models.py  utils.py
gnnbuilder/: __init__.py  code_gen.py  dse.py  models.py  perf_model.py  utils.py
recipe/: meta.yaml
results/: energy_pyg_cpu_gcn_hiv_b1.txt  energy_pyg_cpu_gcn_qm9_b1.txt  energy_pyg_cpu_gin_esol_b1.txt  energy_pyg_cpu_gin_qm9_b1.txt  energy_pyg_cpu_pna_esol_b1.txt  energy_pyg_cpu_pna_freesolv_b1.txt  energy_pyg_cpu_sage_esol_b1.txt  energy_pyg_cpu_sage_freesolv_b1.txt  energy_pyg_cpu_sage_hiv_b1.txt  (+100 more)
(+1133 files in other folders)
